# MeetMyClone

./: .gitignore  README.md
backend/swarm-agents/server/: main.py  setup.sh
backend/testing/a2a_learning/: main.py  pyproject.toml
backend/testing/pipecat-quickstart/: .bot.py.swp  bot.py  mcp_test.py  pyproject.toml
backend/voice-agent/server/: .main.py.swp  helpers.py  main.py  prompts.py  pyproject.toml
strands_tools/browser/: browser.py
temp/: main.py
