[project]
name = "swarm-agents"
version = "0.1.0"
description = "Voice AI Clone pipecat bot"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,daily,silero,deepgram,openai,cartesia,local-smart-turn-v3,runner,google]",
    "pipecat-ai-cli",
    "np",
    "pyee",
    "playwright"
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
